--- a/Pytt/SearchRecipeTableViewCell.xib
+++ b/Pytt/SearchRecipeTableViewCell.xib
@@ -13,52 +13,51 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchRecipesTableViewCell" rowHeight="59" id="aSB-zX-Ecd" customClass="SearchRecipeTableViewCellImplementation" customModule="Pytt" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="59"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchRecipesTableViewCell" rowHeight="123" id="aSB-zX-Ecd" customClass="SearchRecipesTableViewCellImplementation" customModule="Pytt" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aSB-zX-Ecd" id="pp5-Rz-7es">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="59"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XvD-YF-YHn">
-                        <rect key="frame" x="8" y="0.0" width="108.5" height="58.5"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="XvD-YF-YHn" secondAttribute="height" multiplier="13:7" id="dkG-OI-M6x"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IeR-Ag-G1H">
-                        <rect key="frame" x="124.5" y="8" width="242.5" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IeR-Ag-G1H">
+                        <rect key="frame" x="128" y="26" width="239" height="21"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uZM-Zh-2Ln" customClass="CosmosView" customModule="Cosmos">
-                        <rect key="frame" x="124" y="31" width="115" height="14"/>
+                        <rect key="frame" x="128" y="55" width="115" height="14"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="115" id="5x9-hV-0IA"/>
                             <constraint firstAttribute="height" constant="14" id="PkT-We-lGH"/>
                         </constraints>
                     </view>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XvD-YF-YHn">
+                        <rect key="frame" x="8" y="10" width="100" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="100" id="DMX-jM-28m"/>
+                            <constraint firstAttribute="width" secondItem="XvD-YF-YHn" secondAttribute="height" multiplier="1:1" id="kau-jQ-cSy"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="XvD-YF-YHn" firstAttribute="height" secondItem="pp5-Rz-7es" secondAttribute="height" id="81m-2c-DOx"/>
-                    <constraint firstAttribute="topMargin" secondItem="IeR-Ag-G1H" secondAttribute="top" id="9r8-eG-fV2"/>
-                    <constraint firstItem="uZM-Zh-2Ln" firstAttribute="top" secondItem="IeR-Ag-G1H" secondAttribute="bottom" constant="2" id="UTE-3l-ERX"/>
-                    <constraint firstItem="XvD-YF-YHn" firstAttribute="centerY" secondItem="pp5-Rz-7es" secondAttribute="centerY" id="V9E-pW-kyU"/>
-                    <constraint firstItem="IeR-Ag-G1H" firstAttribute="leading" secondItem="XvD-YF-YHn" secondAttribute="trailing" constant="8" id="a2K-sI-lXk"/>
-                    <constraint firstItem="uZM-Zh-2Ln" firstAttribute="leading" secondItem="XvD-YF-YHn" secondAttribute="trailing" constant="7.5" id="bBQ-Nu-xSW"/>
+                    <constraint firstItem="uZM-Zh-2Ln" firstAttribute="leading" secondItem="IeR-Ag-G1H" secondAttribute="leading" id="ClW-Y2-59r"/>
+                    <constraint firstItem="uZM-Zh-2Ln" firstAttribute="top" secondItem="IeR-Ag-G1H" secondAttribute="bottom" constant="8" id="UTE-3l-ERX"/>
+                    <constraint firstAttribute="leadingMargin" secondItem="XvD-YF-YHn" secondAttribute="leading" id="ehV-HG-OxW"/>
+                    <constraint firstItem="IeR-Ag-G1H" firstAttribute="leading" secondItem="XvD-YF-YHn" secondAttribute="trailing" constant="20" id="j6o-gT-P1s"/>
+                    <constraint firstItem="XvD-YF-YHn" firstAttribute="centerY" secondItem="pp5-Rz-7es" secondAttribute="centerY" id="lMa-aa-IWQ"/>
                     <constraint firstAttribute="trailingMargin" secondItem="IeR-Ag-G1H" secondAttribute="trailing" id="myv-4f-e7v"/>
-                    <constraint firstItem="XvD-YF-YHn" firstAttribute="leading" secondItem="pp5-Rz-7es" secondAttribute="leadingMargin" id="qUq-qS-f5o"/>
+                    <constraint firstItem="IeR-Ag-G1H" firstAttribute="top" secondItem="XvD-YF-YHn" secondAttribute="top" constant="16" id="s88-ac-OaN"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="foodImageView" destination="XvD-YF-YHn" id="nRm-5h-aji"/>
-                <outlet property="imageView" destination="XvD-YF-YHn" id="Qqj-FG-Yt2"/>
-                <outlet property="ratingView" destination="uZM-Zh-2Ln" id="Wba-qb-dFq"/>
-                <outlet property="titleLabel" destination="IeR-Ag-G1H" id="wQA-1L-7Ej"/>
+                <outlet property="foodImageView" destination="XvD-YF-YHn" id="evU-ua-hdl"/>
+                <outlet property="ratingView" destination="uZM-Zh-2Ln" id="0Ir-dM-guO"/>
+                <outlet property="titleLabel" destination="IeR-Ag-G1H" id="MVc-mu-g3t"/>
             </connections>
-            <point key="canvasLocation" x="-311.5" y="72.5"/>
+            <point key="canvasLocation" x="-311.5" y="104"/>
         </tableViewCell>
     </objects>
 </document>
