--- a/Pytt/Main.storyboard
+++ b/Pytt/Main.storyboard
@@ -29,7 +29,7 @@
         <!--Recipe List View Controller-->
         <scene sceneID="VTe-L9-qiQ">
             <objects>
-                <tableViewController id="jD2-wE-1PZ" customClass="RecipeListViewController" customModule="Pytt" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="RecipeListViewController" id="jD2-wE-1PZ" customClass="RecipeListViewController" customModule="Pytt" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="VSG-1S-Sbo">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
